<resources>
    <string name="app_name">login_sharedpref</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="login_or_register_textview">Login or Register</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="course_text">Course</string>
    <string name="gender_text">Gender</string>
    <string name="age_text">Age</string>

    <string-array name="list_course">
        <item>BTech</item>
        <item>MTech</item>
        <item>MCA</item>
        <item>MBA</item>
    </string-array>

    <string-array name="list_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

</resources>